{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 161,
  "lineage": "9ed9fcb5-f069-a54f-50e9-112f58ab0fba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nat_Jump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:893379205229:instance/i-0c3d43c781a155cac",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c3d43c781a155cac",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rufol",
            "monitoring": false,
            "primary_network_interface_id": "eni-0aecccb66e0f76ff2",
            "private_dns": "ip-172-16-1-48.eu-west-1.compute.internal",
            "private_ip": "172.16.1.48",
            "public_dns": "ec2-34-244-143-112.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.143.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f8866731498bee7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dc139a7f05d1ca9c",
            "tags": {
              "Name": "Nat_JumpHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e6c1e818d822561"
            ]
          },
          "dependencies": [
            "aws_key_pair.rufol",
            "aws_security_group.Nat_Jump",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Test_Instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:893379205229:instance/i-0f8d8e0519f25b262",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f8d8e0519f25b262",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rufol",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a228e3a62648599b",
            "private_dns": "ip-172-16-2-198.eu-west-1.compute.internal",
            "private_ip": "172.16.2.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ad9b4981d197ead",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04810e2565968906a",
            "tags": {
              "Name": "Test_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03f67994f757d4a96"
            ]
          },
          "dependencies": [
            "aws_key_pair.rufol",
            "aws_security_group.Priv",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0714975d7f93f24fb",
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_IGW"
            },
            "vpc_id": "vpc-0f67bec7e06acab12"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Custom_Route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ebc5efbfbf21733e",
            "owner_id": "893379205229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0714975d7f93f24fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Custom_Route_table"
            },
            "vpc_id": "vpc-0f67bec7e06acab12"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Main_Route_Table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b8bbdd319726b252",
            "owner_id": "893379205229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0c3d43c781a155cac",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main_Route_Table"
            },
            "vpc_id": "vpc-0f67bec7e06acab12"
          },
          "dependencies": [
            "aws_instance.Nat_Jump",
            "aws_key_pair.rufol",
            "aws_security_group.Nat_Jump",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f51462194453501b",
            "route_table_id": "rtb-0b8bbdd319726b252",
            "subnet_id": "subnet-04810e2565968906a"
          },
          "dependencies": [
            "aws_instance.Nat_Jump",
            "aws_key_pair.rufol",
            "aws_route_table.Main_Route_Table",
            "aws_security_group.Nat_Jump",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0270ab60c37d7399f",
            "route_table_id": "rtb-0ebc5efbfbf21733e",
            "subnet_id": "subnet-0dc139a7f05d1ca9c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Custom_Route_table",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Nat_Jump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:security-group/sg-03e6c1e818d822561",
            "description": "Allow All inbound traffic from EFREI \u0026 Home network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e6c1e818d822561",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.102.224.0/24",
                  "46.193.4.20/32",
                  "172.16.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Nat_Jump",
            "name_prefix": null,
            "owner_id": "893379205229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f67bec7e06acab12"
          },
          "dependencies": [
            "aws_subnet.sub_priv",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:security-group/sg-03f67994f757d4a96",
            "description": "Allow All inbound/outbound traffic from Public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f67994f757d4a96",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Priv",
            "name_prefix": null,
            "owner_id": "893379205229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all from public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f67bec7e06acab12"
          },
          "dependencies": [
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:subnet/subnet-04810e2565968906a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-04810e2565968906a",
            "map_public_ip_on_launch": false,
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_Private"
            },
            "vpc_id": "vpc-0f67bec7e06acab12"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:subnet/subnet-0dc139a7f05d1ca9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0dc139a7f05d1ca9c",
            "map_public_ip_on_launch": false,
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_Public"
            },
            "vpc_id": "vpc-0f67bec7e06acab12"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:vpc/vpc-0f67bec7e06acab12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0846082b5d707b167",
            "default_route_table_id": "rtb-0dfbe93c8012bb7d5",
            "default_security_group_id": "sg-0742c0d8e906bd31d",
            "dhcp_options_id": "dopt-7b98cc1d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f67bec7e06acab12",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dfbe93c8012bb7d5",
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD"
            }
          }
        }
      ]
    }
  ]
}